fix: Project launch

--- a/.example.env
+++ b/.example.env
@@ -1,9 +1,11 @@
 # Application runtime environment: can be 'development' or 'production'
 # Default: production
-NODE_ENV=
+NODE_ENV=development
 
 # Service domain
-DOMAIN=
+DOMAIN=https://local.encvoy.com
+# For local development
+VITE_DOMAIN=https://local.encvoy.com
 
 # Admin login
 # Default: 'root'
@@ -19,12 +21,16 @@ DELETE_PROFILE_AFTER_DAYS=
 # Unique ID of your application
 # Required parameter
 # It is recommended to generate a UUID
-CLIENT_ID=
+CLIENT_ID=client-id-uuid
+# For local development
+VITE_CLIENT_ID=client-id-uuid
 
 # Unique secret of your application
 # Required parameter
 # It is recommended to generate a UUID
-CLIENT_SECRET=
+CLIENT_SECRET=client-secret-uuid
+# For local development
+VITE_CLIENT_SECRET=client-secret-uuid
 
 # Link on the help button
 MANUAL_URL=
@@ -70,6 +76,8 @@ CONSOLE_LOG_LEVELS=
 # Default TTL: 900
 EMAIL_PROVIDER=
 
+# For local development
+VITE_CUSTOM_STYLES='{"palette": {"white": {"accent": "#6b5dd3","accentHover": "#5d4fc4","outlinedColor": "rgba(0, 0, 0, 0.12)","outlinedBackgroundColor": "#fff","borderColor": "#f0c9bd","outlinedHoverBackgroundColor": "#ffebe6","outlinedHoverBorderColor": "#fae9de"}},"component": {"borderRadius": "24px"},"button": {"borderRadius": "24px"},"isAccordionIconColored": true,"contentPosition": "center", "widget": {"backgroundColor": "#f88484ff", "backgroundHover": "#000000", "color": "#000000", "isHideText": false}}'
 # Customization of the personal account
 # All elements have default values
 # The value must be in JSON format
