--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "files.exclude": {
     "**/package-lock.json": true,
     "**/node_modules": true,
-    "**/dist": true,
+    // "**/dist": true,
     "**/views/widget": true,
     "**/views/widget-auth": true,
     "**/views/docs": true,
